--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ae-chess-frontend",
+  "name": "know-your-knight-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
